---------------------
subunit release notes
---------------------


0.0.2 (IN DEVELOPMENT)
----------------------

  CHANGES:

  IMPROVEMENTS:

  BUG FIXES:

  API CHANGES:

    * When a time: directive is encountered in a subunit stream, the python
      bindings now call the ``time(seconds)`` method on ``TestResult``.

  INTERNALS:

    * ExecTestCase supports passing arguments to test scripts.
