@@ -21,3 +21,6 @@ subunit release notes
 
     * ExecTestCase supports passing arguments to test scripts.
 
+    * New helper ``subunit.test_results.HookedTestResultDecorator`` which can
+      be used to call some code on every event, without having to implement all
+      the event methods.
